# llvm-project

./: .editorconfig
clang-tools-extra/clang-tidy/: CMakeLists.txt  ClangTidyCheck.cpp  ClangTidyCheck.h  ClangTidyForceEnabledLinker.h.in  ClangTidyForceLinker.h
clang-tools-extra/clang-tidy/bugprone/: BugproneTidyModule.cpp  CMakeLists.txt  MacroConditionCheck.cpp  MacroConditionCheck.h
clang-tools-extra/clang-tidy/cppcoreguidelines/: MacroUsageCheck.cpp
clang-tools-extra/clang-tidy/modernize/: CMakeLists.txt  FunctionExpressionMatcher.cpp  FunctionExpressionMatcher.h  MacroToEnumCheck.cpp  MacroToFunctionCheck.cpp  MacroToFunctionCheck.h  ModernizeTidyModule.cpp  PreferScopedEnumCheck.cpp  PreferScopedEnumCheck.h
clang-tools-extra/clang-tidy/tool/: run-clang-tidy.py
clang-tools-extra/clang-tidy/utils/: CMakeLists.txt  PPTree.cpp  PPTree.h  PPTreeMatchers.cpp  PPTreeMatchers.h  PPTreeVisitor.cpp  PPTreeVisitor.h
clang-tools-extra/docs/: ReleaseNotes.rst
clang-tools-extra/docs/clang-tidy/checks/: list.rst
clang-tools-extra/docs/clang-tidy/checks/bugprone/: macro-condition.rst
clang-tools-extra/docs/clang-tidy/checks/modernize/: macro-to-function.rst  prefer-scoped-enum.rst
clang-tools-extra/test/: CMakeLists.txt
clang-tools-extra/test/clang-apply-replacements/: CMakeLists.txt
clang-tools-extra/test/clang-change-namespace/: CMakeLists.txt
clang-tools-extra/test/clang-doc/: CMakeLists.txt
clang-tools-extra/test/clang-include-fixer/: CMakeLists.txt
clang-tools-extra/test/clang-move/: CMakeLists.txt
clang-tools-extra/test/clang-query/: CMakeLists.txt
clang-tools-extra/test/clang-reorder-fields/: CMakeLists.txt
clang-tools-extra/test/clang-tidy/: CMakeLists.txt  check_clang_tidy.py
clang-tools-extra/test/clang-tidy/checkers/: bugprone-macro-condition.cpp  util-pp-tree.cpp
clang-tools-extra/test/clang-tidy/checkers/Inputs/modernize-redundant-void-arg/: modernize-redundant-void-arg.h
clang-tools-extra/test/clang-tidy/checkers/bugprone/: macro-condition.cpp
clang-tools-extra/test/clang-tidy/checkers/modernize/: macro-to-function.cpp  prefer-scoped-enum.cpp  redundant-void-arg.cpp
clang-tools-extra/test/modularize/: CMakeLists.txt
clang-tools-extra/test/pp-trace/: CMakeLists.txt
clang-tools-extra/unittests/clang-tidy/: CMakeLists.txt
clang-tools-extra/unittests/clang-tidy/google/: CMakeLists.txt
clang-tools-extra/unittests/clang-tidy/llvm/: CMakeLists.txt
clang-tools-extra/unittests/clang-tidy/misc/: CMakeLists.txt
clang-tools-extra/unittests/clang-tidy/modernize/: CMakeLists.txt
clang-tools-extra/unittests/clang-tidy/objc/: CMakeLists.txt
clang-tools-extra/unittests/clang-tidy/readability/: CMakeLists.txt
